Release Notes for Cppcheck 2.15

New checks:
-

Improved checking:
-

GUI:
-

Changed interface:
-

Deprecations:
- Support for Python 2.7 has been deprecated (it went EOL in January 2020) and will be removed in Cppcheck 2.16 - please use Python 3.x instead.
-

Other:
- Add support for 'CLICOLOR_FORCE'/'NO_COLOR' environment variables to force/disable ANSI color output for diagnostics.
- Added command-line option `--cpp-header-probe` (and `--no-cpp-header-probe`) to probe headers and extension-less files for Emacs marker (see https://trac.cppcheck.net/ticket/10692 for more details)
- Add "remark comments" that can be used to generate reports with justifications for warnings